# makeflight

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  mkdocs.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  flight-controller-guide.md  index.md  rov.md  usage.md
docs/advanced/: control-allocation.md  ekf-fusion.md  framework-coupling.md  index.md  motor-modeling.md  real-time-scheduling.md  rp2350-dshot.md  system-identification.md  telemetry-debugging.md
include/flight/actuators/: actuators.h  biheli_pwm_output.h  dshot_output.h  pwm_output.h  rp2350_dshot_pio_output.h  rp2350_dshot_telemetry.h  telemetry.h
include/flight/config/: config.h  in_memory_config.h
include/flight/controllers/: basic_controller.h  controllers.h  rov_controller.h
include/flight/core/: types.h
include/flight/estimators/: estimators.h  madgwick.h
include/flight/hal/: hal.h  pico_config.h  rp2350_hal.h  rp2350_pico_hal.h
include/flight/receiver/: null_receiver.h  receiver.h  udp_receiver.h
include/flight/scheduler/: scheduler.h
include/flight/sensors/: mpu6050.h  sensors.h
include/flight/telemetry/: telemetry.h  udp_telemetry.h
include/flight/vehicle/: rov4_vehicle.h  vehicle.h
scripts/: telemetry_receiver.py
src/: main.cpp
src/actuators/: biheli_pwm_output.cpp  dshot_output.cpp  pwm_output.cpp
src/config/: in_memory_config.cpp
src/controllers/: basic_controller.cpp  rov_controller.cpp
src/estimators/: madgwick.cpp
src/hal/: rp2350_hal.cpp  rp2350_pico_hal.cpp
src/pico/: dshot_telem_rx.pio  dshot_tx.pio  main_pico.cpp  rp2350_dshot_pio_output.cpp  rp2350_dshot_telemetry.cpp
src/receiver/: udp_receiver.cpp
src/scheduler/: scheduler.cpp
src/sensors/: mpu6050.cpp
src/telemetry/: udp_telemetry.cpp
src/vehicle/: rov4_vehicle.cpp  vehicle.cpp
tests/: test_biheli_pwm.cpp  test_config.cpp  test_dshot.cpp  test_madgwick.cpp  test_mpu6050.cpp  test_rov_controller.cpp  test_scheduler.cpp  test_udp_receiver.cpp
